Demo: OWASP A01:2021 - Broken Access Control

--- a/webshop/templates/profile.html
+++ b/webshop/templates/profile.html
@@ -10,7 +10,7 @@
 
     {% block content %}
     <h1>User Profile</h1>
-    <p>Welcome, {{ user.username }}!</p>
+    <p>Welcome, {{ profile.username }}!</p>
 
     <h2>Your Orders</h2>
     <ul>
