--- a/webshop/templates/base.html
+++ b/webshop/templates/base.html
@@ -45,7 +45,7 @@
         <ul>
             <li><a href="{% url 'product_list' %}">Shop</a></li>
             {% if user.is_authenticated %}
-            <li><a href="{% url 'profile' %}">Profile</a></li>
+            <li><a href="{% url 'profile' user.id %}">Profile</a></li>
             {% else %}
             <li><a href="{% url 'login' %}">Login</a></li>
             {% endif %}
