Demo: OWASP A07:2021 – Identification and Authentication Failures

--- a/webshop/templates/login.html
+++ b/webshop/templates/login.html
@@ -8,5 +8,8 @@
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Login</button>
+  <p>
+    <a href="{% url 'password_reset' %}">Forgot your password?</a>
+  </p>
 </form>
 {% endblock %}
